task/helm-upgrade-from-source/0.1/README.md
# Helm

These tasks will install / upgrade a helm chart into your Kubernetes / OpenShift Cluster using [Helm](https://github.com/helm/helm).

## Install the Task

### helm install / upgrade from source code

```
kubectl apply -f https://raw.githubusercontent.com/tektoncd/catalog/main/task/helm-upgrade-from-source/0.1/helm-upgrade-from-source.yaml
```

#### Parameters

- **charts_dir**: The directory in the source repository where the installable chart should be found.
- **release_version**: The version of the release (*default: v1.0.0*)
- **release_name**: The name of the release (*default: helm-release*)
- **release_namespace**: The namespace in which the release is to be installed (*default: ""*)
- **overwrite_values**: The values to be overwritten (*default: ""*)
- **helm_version**: The helm version which should be used (*default: latest*)

#### Workspaces

* **source**: A [Workspace](https://github.com/tektoncd/pipeline/blob/main/docs/workspaces.md) containing the helm chart.

## Platforms

The Task can be run on `linux/amd64` platform.

## Usage

### PipelineRun

An example `Pipeline` with a `PipelineRun` can be found in the subdirectory `tests`.

### TaskRun

This `TaskRun` runs the task to retrieve a Git repo and then installs/updates the helm chart that is in the Git repo.

```yaml
# example upgrade from source
apiVersion: tekton.dev/v1beta1
kind: TaskRun
metadata:
  name: example-helm-upgrade-from-source
spec:
  taskRef:
    name: helm-upgrade-from-source
  params:
  - name: charts_dir
    value: helm-sample-chart
  - name: releases_version
    value: v1.0.0
  - name: release_name
    value: helm-source-sample
  - name: overwrite_values
    value: "autoscaling.enabled=true,autoscaling.maxReplicas=3"
  workspaces:
  - name: source
    persistentVolumeClaim:
      claimName: my-source
```